
# Project name
project( building_footprint_extraction )

include_directories( ${CMAKE_CURRENT_SOURCE_DIR} )

option(BUILD_BUILDING_FOOTPRINT_EXTRACTION_CLI "build building_footprint_extraction CLI sample" ON)
option(BUILD_BUILDING_FOOTPRINT_EXTRACTION_GUI "build building_footprint_extraction GUI sample" ON)

if(BUILD_BUILDING_FOOTPRINT_EXTRACTION_CLI OR BUILD_BUILDING_FOOTPRINT_EXTRACTION_GUI)
  add_subdirectory(core)
endif(BUILD_BUILDING_FOOTPRINT_EXTRACTION_CLI OR BUILD_BUILDING_FOOTPRINT_EXTRACTION_GUI)

if(BUILD_BUILDING_FOOTPRINT_EXTRACTION_CLI)
  add_subdirectory(cli)
endif(BUILD_BUILDING_FOOTPRINT_EXTRACTION_CLI)

if(BUILD_BUILDING_FOOTPRINT_EXTRACTION_GUI)
  add_subdirectory(gui)
endif(BUILD_BUILDING_FOOTPRINT_EXTRACTION_GUI)
