
# Project name
project( building_footprint_rectangle )

include_directories( ${CMAKE_CURRENT_SOURCE_DIR} )

option(BUILD_BUILDING_FOOTPRINT_RECTANGLE_CLI "build building_footprint_rectangle CLI sample" ON)
option(BUILD_BUILDING_FOOTPRINT_RECTANGLE_GUI "build building_footprint_rectangle GUI sample" ON)

if(BUILD_BUILDING_FOOTPRINT_RECTANGLE_CLI OR BUILD_BUILDING_FOOTPRINT_RECTANGLE_GUI)
  add_subdirectory(core)
endif(BUILD_BUILDING_FOOTPRINT_RECTANGLE_CLI OR BUILD_BUILDING_FOOTPRINT_RECTANGLE_GUI)

if(BUILD_BUILDING_FOOTPRINT_RECTANGLE_CLI)
  add_subdirectory(cli)
endif(BUILD_BUILDING_FOOTPRINT_RECTANGLE_CLI)

if(BUILD_BUILDING_FOOTPRINT_RECTANGLE_GUI)
  add_subdirectory(gui)
endif(BUILD_BUILDING_FOOTPRINT_RECTANGLE_GUI)
