
# Project name
project( facade_elements_rectangle )

include_directories( ${CMAKE_CURRENT_SOURCE_DIR} )

option(BUILD_FACADE_ELEMENTS_RECTANGLE_CLI "build facade_elemets_rectangle CLI sample" ON)
option(BUILD_FACADE_ELEMENTS_RECTANGLE_GUI "build facade_elemets_rectangle GUI sample" ON)

if(BUILD_FACADE_ELEMENTS_RECTANGLE_CLI OR BUILD_FACADE_ELEMENTS_RECTANGLE_GUI)
  add_subdirectory(core)
endif(BUILD_FACADE_ELEMENTS_RECTANGLE_CLI OR BUILD_FACADE_ELEMENTS_RECTANGLE_GUI)

if(BUILD_FACADE_ELEMENTS_RECTANGLE_CLI)
  add_subdirectory(cli)
endif(BUILD_FACADE_ELEMENTS_RECTANGLE_CLI)

if(BUILD_FACADE_ELEMENTS_RECTANGLE_GUI)
  add_subdirectory(gui)
endif(BUILD_FACADE_ELEMENTS_RECTANGLE_GUI)
