find_package( wxWidgets )
if(wxWidgets_FOUND)
    include(${wxWidgets_USE_FILE})
    file( GLOB WX_VISITORS_HEADER_FILES *.h *.hpp )
    include_directories(${CMAKE_SOURCE_DIR}/lib/wxfreechart/include)
    aux_source_directory( . WX_VISITORS_SRC )
    add_library(wx_visitors STATIC ${WX_VISITORS_HEADER_FILES} ${WX_VISITORS_SRC})
endif()
