#file( GLOB CORE_HEADER_FILES *.h *.hpp )
#aux_source_directory( ${CMAKE_CURRENT_SOURCE_DIR} CORE_SRC )
#add_library(building_footprint_extraction ${CORE_HEADER_FILES}   ${CORE_SRC})

# set( BUILDING_FOOTPRINT_EXTRACTION_LIBRARIES ${Boost_LIBRARIES} ${GEOMETRY_LIBRARIES} building_footprint_extraction PARENT_SCOPE )


set( BUILDING_FOOTPRINT_EXTRACTION_LIBRARIES ${Boost_LIBRARIES} ${GEOMETRY_LIBRARIES} PARENT_SCOPE )
